--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>My Hungarian Poem generator</h1>
+    <footer>This project was coded by
+         <a href="https://github.com/Meggyis" target="_blank">Katalin Simon,</a> 
+         it is open sourced on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">GitHub </a> and is hosted on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator"> Netlify.</a></footer>
     <script src="index.js"></script>
 </body>
 </html>
