Added placeholder and removed css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Hungarian Poem Generator</title>
+    <title>AI Hungarian Poem Generator</title>
 </head>
+<main>
+    <form>
+        <input 
+        type="text"
+        placeholder="Enter the topic of the Hungarian poem"
+        autofocus
+        required
+        autocomplete=off> 
+        <input type="submit">
+    </form>
+    <div>
+        xxx
+        <br />
+        xxx
+    </div>
+</main>
 <body>
-    <h1>My Hungarian Poem generator</h1>
+    <h1>AI Hungarian Poem generator</h1>
     <footer>This project was coded by
          <a href="https://github.com/Meggyis" target="_blank">Katalin Simon,</a> 
-         it is open sourced on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">GitHub </a> and is hosted on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator"> Netlify.</a></footer>
+         it is open sourced on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">GitHub </a> and is hosted on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">Netlify.</a></footer>
     <script src="index.js"></script>
 </body>
 </html>
