Added styling to the project

--- a/index.html
+++ b/index.html
@@ -6,27 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Hungarian Poem Generator</title>
 </head>
-<main>
-    <form>
-        <input 
-        type="text"
-        placeholder="Enter the topic of the Hungarian poem"
-        autofocus
-        required
-        autocomplete=off> 
-        <input type="submit">
-    </form>
-    <div>
+<body>
+    <div class="container">
+      <header>
+       <h1>AI Hungarian Poem generator</h1>
+      </header>
+      <main>
+        <form>
+          <input 
+           type="text"
+           placeholder="Enter the topic of the Hungarian poem"
+           autofocus
+           required
+           autocomplete=off
+           class="prompt"> 
+          <input type="submit" class="button">
+        </form>
+    <div class="poem">
         xxx
         <br />
         xxx
     </div>
 </main>
-<body>
-    <h1>AI Hungarian Poem generator</h1>
-    <footer>This project was coded by
+</body>
+     <footer>This project was coded by
          <a href="https://github.com/Meggyis" target="_blank">Katalin Simon,</a> 
          it is open sourced on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">GitHub </a> and is hosted on <a href="https://github.com/Meggyis/My-Hungarian-poem-generator" target="_blank">Netlify.</a></footer>
-    <script src="index.js"></script>
+       <script src="index.js"></script>
+     </footer>
+</div>
 </body>
 </html>
