--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
        <h1>AI Hungarian Poem generator</h1>
       </header>
       <main>
-        <form>
+        <form id="poem-generator-form">
           <input 
            type="text"
            placeholder="Enter the topic of the Hungarian poem"
@@ -22,10 +23,7 @@
            class="prompt"> 
           <input type="submit" class="button">
         </form>
-    <div class="poem">
-        xxx
-        <br />
-        xxx
+    <div class="poem" id="poem">
     </div>
 </main>
 </body>
