--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,8 +21,9 @@
            autofocus
            required
            autocomplete=off
-           class="prompt"> 
-          <input type="submit" class="button">
+           class="instruction" 
+           id="instruction"> 
+          <input type="submit" class="submit-button">
         </form>
     <div class="poem" id="poem">
     </div>
